zellij-server/src/plugins/unit/snapshots/zellij_server__plugins__plugin_tests__scroll_to_top_in_pane_id_plugin_command.snap
---
source: zellij-server/src/plugins/./unit/plugin_tests.rs
assertion_line: 7695
expression: "format!(\"{:#?}\", screen_instruction)"
---
Some(
    ScrollToTopInPaneId(
        Terminal(
            2,
        ),
    ),
)
