zellij-server/src/plugins/unit/snapshots/zellij_server__plugins__plugin_tests__scroll_up_in_pane_id_plugin_command.snap
---
source: zellij-server/src/plugins/./unit/plugin_tests.rs
assertion_line: 7553
expression: "format!(\"{:#?}\", screen_instruction)"
---
Some(
    ScrollUpInPaneId(
        Terminal(
            2,
        ),
    ),
)
