zellij-server/src/plugins/unit/snapshots/zellij_server__plugins__plugin_tests__show_cursor_plugin_command.snap
---
source: zellij-server/src/plugins/./unit/plugin_tests.rs
expression: "format!(\"{:#?}\", show_cursor_instruction)"
---
Some(
    (
        0,
        1,
        Some(
            (
                5,
                10,
            ),
        ),
    ),
)
