zellij-server/src/plugins/unit/snapshots/zellij_server__plugins__plugin_tests__show_pane_with_id_plugin_command.snap
---
source: zellij-server/src/plugins/./unit/plugin_tests.rs
assertion_line: 6798
expression: "format!(\"{:#?}\", focus_pane_event)"
---
Some(
    FocusPaneWithId(
        Terminal(
            1,
        ),
        true,
        1,
    ),
)
